# BlogGeneratorAgenticAI

./: README.md  app.py  main.py  pyproject.toml
src/graphs/: graph_builder.py
src/llms/: groq_llm.py
src/nodes/: blog_node.py
src/states/: blogstate.py
